# so_long

./: CMakeLists.txt  Makefile  ft_action.c  ft_background.c  ft_button_press.c  ft_check_file.c  ft_check_map_top_bottom.c  ft_check_map_walls.c  ft_close.c  ft_collectible.c  ft_enemy.c  ft_enemy_animation.c  ft_exit.c  ft_free_all.c  ft_game_over.c  ft_game_window.c  ft_get_player_position.c  ft_is_it_game.c  ft_itoa.c  ft_map_creation.c  ft_map_dell.c  ft_map_parsing.c  ft_map_picture.c  ft_move_down.c  ft_move_left.c  ft_move_right.c  ft_move_up.c  ft_objects_quantity.c  ft_player.c  ft_player_left_animation.c  ft_player_right_animation.c  ft_putstr.c  ft_rows_number.c  ft_steps_string.c  ft_walls.c  ft_winner.c  ft_wrong_size.c  get_next_line.c  get_next_line_utils.c  main.c  (+3 more)
pic/: background.xpm  collectible1.xpm  collectible2.xpm  collectible3.xpm  collectible4.xpm  collectible5.xpm  corner1.xpm  corner2.xpm  corner3.xpm  corner4.xpm  enemy1.xpm  enemy2.xpm  enemy3.xpm  enemy4.xpm  exit.xpm  exit2.xpm  exit3.xpm  game_over.xpm  left1.xpm  left2.xpm  left3.xpm  left4.xpm  left5.xpm  left6.xpm  left7.xpm  right1.xpm  right2.xpm  right3.xpm  right4.xpm  right5.xpm  right6.xpm  right7.xpm  string_background.xpm  wall.xpm
